deployment/kubernetes/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
  - name: http
    port: 80
    targetPort: 3000
  type: LoadBalancer
